prusti-tests/tests/verify/fail/floats/nan_eq_nan.rs
fn main() {
    assert!(f32::NAN == f32::NAN); //~ ERROR: the asserted expression might not hold

}